[gd_scene load_steps=8 format=2]

[ext_resource path="res://rts_camera.gd" type="Script" id=1]
[ext_resource path="res://root.gd" type="Script" id=2]
[ext_resource path="res://Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.gd" type="Script" id=5]
[ext_resource path="res://inventory_cont.tscn" type="PackedScene" id=6]
[ext_resource path="res://ItemDrop.tscn" type="PackedScene" id=7]

[node name="root" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="asteroid" parent="." instance=ExtResource( 4 )]
position = Vector2( 139.249, 440.9 )

[node name="asteroid2" parent="." instance=ExtResource( 4 )]
position = Vector2( 337.824, 745.407 )

[node name="asteroid3" parent="." instance=ExtResource( 4 )]
position = Vector2( 398.281, 485.717 )

[node name="asteroid4" parent="." instance=ExtResource( 4 )]
position = Vector2( 137.962, -433.708 )

[node name="asteroid5" parent="." instance=ExtResource( 4 )]
position = Vector2( 492.724, -415.639 )

[node name="asteroid6" parent="." instance=ExtResource( 4 )]
position = Vector2( 880.476, 348.246 )

[node name="asteroid7" parent="." instance=ExtResource( 4 )]
position = Vector2( 2098.24, 966.349 )

[node name="asteroid8" parent="." instance=ExtResource( 4 )]
position = Vector2( 2671.85, 806.44 )

[node name="asteroid9" parent="." instance=ExtResource( 4 )]
position = Vector2( 2012.41, -84.4763 )

[node name="asteroid10" parent="." instance=ExtResource( 4 )]
position = Vector2( 2702.15, 69.0094 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="delete" type="Button" parent="HUD"]
margin_left = 27.3117
margin_top = 14.3448
margin_right = 148.312
margin_bottom = 34.3448
text = "Delete_ship"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ship_inventory" type="Button" parent="HUD"]
margin_left = 953.891
margin_top = 27.5943
margin_right = 1111.89
margin_bottom = 127.594
text = "ship_inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_ship" type="Button" parent="HUD"]
margin_left = 27.1526
margin_top = 46.4591
margin_right = 148.153
margin_bottom = 66.4591
rect_pivot_offset = Vector2( -329.059, 115.101 )
text = "Test_ship"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portal" type="Button" parent="HUD"]
margin_left = 325.153
margin_top = 12.4591
margin_right = 446.153
margin_bottom = 32.4591
rect_pivot_offset = Vector2( -329.059, 115.101 )
text = "portal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_ship_2" type="Button" parent="HUD"]
margin_left = 27.878
margin_top = 82.6182
margin_right = 148.878
margin_bottom = 102.618
text = "Test_ship_2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_base_ship" type="Button" parent="HUD"]
margin_left = 178.602
margin_top = 13.6182
margin_right = 299.602
margin_bottom = 33.6182
text = "Spawn_base_ship"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rts_camera" type="Camera2D" parent="HUD"]
position = Vector2( 515, 300 )
current = true
editor_draw_drag_margin = true
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="HUD/rts_camera"]

[node name="inventory_cont" parent="HUD" instance=ExtResource( 6 )]
visible = false
position = Vector2( 266.251, 108.593 )

[node name="ItemDrop" parent="." instance=ExtResource( 7 )]
position = Vector2( 1227.03, 285.409 )

[node name="ItemDrop2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1527.84, 29.4881 )

[node name="ItemDrop3" parent="." instance=ExtResource( 7 )]
position = Vector2( 1402.13, 137.244 )

[node name="ItemDrop4" parent="." instance=ExtResource( 7 )]
position = Vector2( 1188.86, -85.003 )

[node name="ItemDrop5" parent="." instance=ExtResource( 7 )]
position = Vector2( 955.389, -143.371 )

[node name="ItemDrop6" parent="." instance=ExtResource( 7 )]
position = Vector2( 1369.89, -13.022 )

[node name="ItemDrop7" parent="." instance=ExtResource( 7 )]
position = Vector2( 1670.71, -268.943 )

[node name="ItemDrop8" parent="." instance=ExtResource( 7 )]
position = Vector2( 1545, -161.187 )

[node name="ItemDrop9" parent="." instance=ExtResource( 7 )]
position = Vector2( 1331.73, -383.434 )

[node name="ItemDrop10" parent="." instance=ExtResource( 7 )]
position = Vector2( 1098.26, -441.802 )

[node name="ItemDrop11" parent="." instance=ExtResource( 7 )]
position = Vector2( 1512.76, 193.34 )

[node name="ItemDrop12" parent="." instance=ExtResource( 7 )]
position = Vector2( 1813.58, -62.5813 )

[node name="ItemDrop13" parent="." instance=ExtResource( 7 )]
position = Vector2( 1687.86, 45.1751 )

[node name="ItemDrop14" parent="." instance=ExtResource( 7 )]
position = Vector2( 1474.59, -177.072 )

[node name="ItemDrop15" parent="." instance=ExtResource( 7 )]
position = Vector2( 1241.12, -235.44 )

[node name="ItemDrop16" parent="." instance=ExtResource( 7 )]
position = Vector2( 1131.78, 21.9008 )

[node name="ItemDrop17" parent="." instance=ExtResource( 7 )]
position = Vector2( 1432.6, -234.021 )

[node name="ItemDrop18" parent="." instance=ExtResource( 7 )]
position = Vector2( 1306.89, -126.264 )

[node name="ItemDrop19" parent="." instance=ExtResource( 7 )]
position = Vector2( 1093.62, -348.512 )

[node name="ItemDrop20" parent="." instance=ExtResource( 7 )]
position = Vector2( 860.145, -406.88 )
[connection signal="pressed" from="HUD/delete" to="HUD" method="_on_delete_pressed"]
[connection signal="pressed" from="HUD/ship_inventory" to="HUD" method="_on_ship_inventory_pressed"]
[connection signal="pressed" from="HUD/test_ship" to="HUD" method="_on_test_ship_pressed"]
[connection signal="pressed" from="HUD/portal" to="." method="_on_portal_pressed"]
[connection signal="pressed" from="HUD/test_ship_2" to="HUD" method="_on_test_ship_2_pressed"]
[connection signal="pressed" from="HUD/spawn_base_ship" to="HUD" method="_on_spawn_base_ship_pressed"]
